--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
     "dat.gui": "^0.7.9",
+    "katex": "^0.16.22",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-katex": "^3.1.0",
     "three": "^0.176.0"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-katex": "^3.0.4",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
