--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
+    "d3": "^7.9.0",
     "dat.gui": "^0.7.9",
     "katex": "^0.16.22",
     "next": "15.0.4",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
+    "@types/d3": "^7.4.3",
     "@types/dat.gui": "^0.7.13",
     "@types/node": "^20",
     "@types/react": "^19",
