adding freeplay to drag cards around

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@react-three/fiber": "^9.1.2",
     "d3": "^7.9.0",
     "dat.gui": "^0.7.9",
+    "framer-motion": "^12.23.24",
     "katex": "^0.16.22",
-    "next": "15.0.4",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-katex": "^3.1.0",
